Adicionando distributionManagement no POM

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
 			<version>1.0.2</version>
 		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/llessalc/pagamentos-fase03</url>
+		</repository>
+	</distributionManagement>
+
 
 	<build>
 		<plugins>
