--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
-spring.datasource.url=${MYSQL_HOST}
+spring.datasource.url=${MYSQL_URL}
 spring.datasource.username=root
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
