--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   unit-test:
     runs-on: ubuntu-latest
-    if: github.ref !== 'refs/heads/main'
+    if: github.ref != 'refs/heads/main'
 
     services:
       mysql:
