--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>pagamento</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pagamento</name>
-	<description>Projeto para conexão pedido e API pagamentos</description>
+	<description>Servico pagamentos</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
