--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # jdbc:mysql://${MYSQL_HOST}:3306/pagamento_58?createDatabaseIfNotExist=true
+qr.url=https://api.mercadopago.com/instore/orders/qr/seller/collectors/${MP_USER}/pos/${MP_POS}/qrs
+mp.token=${MP_TOKEN}
+pagamento.wh=${PAGAMENTO_WH}
+pedidos.service=${PEDIDOS_SERVICE}
