--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,13 +1,15 @@
-server.port=8081
-
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/pagamento_58?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 qr.url=${QR_URL}
 mp.token=${MP_TOKEN}
 pagamento.wh=${PAGAMENTO_WH}
 pedidos.service=${PEDIDOS_SERVICE}
+
+spring.h2.console.enabled=true
