Creating consumer for pedidos queue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ qr.url=${QR_URL}
 mp.token=${MP_TOKEN}
 pagamento.wh=${PAGAMENTO_WH}
 pedidos.service=${PEDIDOS_SERVICE}
+
+events.queue-pedidos=${PEDIDOS_QUEUE}
+
