--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,5 @@ pagamento.wh=${PAGAMENTO_WH}
 pedidos.service=${PEDIDOS_SERVICE}
 
 events.queue-pedidos=${PEDIDOS_QUEUE}
+events.queue-pagamentos-criados=${PAGAMENTOS_CRIADOS_QUEUE}
 
