--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,6 +10,9 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 qr.url=${QR_URL}
 mp.token=${MP_TOKEN}
 pagamento.wh=${PAGAMENTO_WH}
-pedidos.service=${PEDIDOS_SERVICE}
+events.queue-pedidos=${PEDIDOS_QUEUE}
+events.queue-pagamentos-criados=${PAGAMENTOS_CRIADOS_QUEUE}
+events.queue-pagamentos-confirmados=${PAGAMENTOS_CONFIRMADOS_QUEUE}
+events.queue-pagamentos-cancelados=${PAGAMENTOS_CANCELADOS_QUEUE}
 
 spring.h2.console.enabled=true
