--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,9 +10,14 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 qr.url=${QR_URL}
 mp.token=${MP_TOKEN}
 pagamento.wh=${PAGAMENTO_WH}
+
+
+spring.cloud.aws.endpoint=http://localhost:4566
+spring.cloud.aws.credentials.profile.name=test
+
 events.queue-pedidos=${PEDIDOS_QUEUE}
-events.queue-pagamentos-criados=${PAGAMENTOS_CRIADOS_QUEUE}
-events.queue-pagamentos-confirmados=${PAGAMENTOS_CONFIRMADOS_QUEUE}
-events.queue-pagamentos-cancelados=${PAGAMENTOS_CANCELADOS_QUEUE}
+events.queue-pagamentos-criados=pagamentos-criados-queue-test
+events.queue-pagamentos-confirmados=pagamentos-confirmados-queue-test
+events.queue-pagamentos-cancelados=pagamentos-cancelados-queue-test
 
 spring.h2.console.enabled=true
