--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+server.servlet.session.cookie.same-site=lax
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/pagamento_58?createDatabaseIfNotExist=true
 spring.datasource.username=root
