Ajustes para exclusão de um pagamento pela rota criada para LGPD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,10 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 qr.url=${QR_URL}
 mp.token=${MP_TOKEN}
 pagamento.wh=${PAGAMENTO_WH}
+
+# Consumers
 events.queue-pedidos=${PEDIDOS_QUEUE}
+# Publisher
 events.queue-pagamentos-criados=${PAGAMENTOS_CRIADOS_QUEUE}
 events.queue-pagamentos-confirmados=${PAGAMENTOS_CONFIRMADOS_QUEUE}
 events.queue-pagamentos-cancelados=${PAGAMENTOS_CANCELADOS_QUEUE}
